@@ -22,6 +22,7 @@
 <LI><B>Output Files generated from the UniProt Parser</B>
 <UL>
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_acc_assoc.txt">uniprot_acc.assoc.txt</A> - all UniProt accession ids, EntrezGene, Ensembl, EC, PDB, InterPro, SwissProt key words
+<LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_acc_assoc_err.txt">uniprot_acc.assoc_err.txt</A> - UniProt ids that contain neither EntrezGene nor Ensembl ids
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_sp_assoc.txt">uniprot_sp.assoc.txt</A> - SwissProt accession ids
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_tr_assoc.txt">uniprot_tr.assoc.txt</A> - TrEMBL accession ids
 <P>
